--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.18.3",
     "cookie-parser": "~1.4.4",
     "core-util-is": "^1.0.3",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
